<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".n2_1"
    android:gravity="center_horizontal|center_vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">

        <ToggleButton
            android:id="@+id/toggle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:onClick="onToggleButtonClicked"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/hot"
                android:id="@+id/indicator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox_milk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milk" />

        <CheckBox
            android:id="@+id/checkbox_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cream"/>

        <CheckBox
            android:id="@+id/checkbox_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar" />

        <CheckBox
            android:id="@+id/checkbox_syrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/syrup"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/type_o_negative" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Доставить"
        android:onClick="onButtonClicked" />

</LinearLayout>